--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
         exclude: |
           (?x)(
             ^.devcontainer/|
-            reports/evidence.plugins.yaml 
+            reports/evidence.plugins.yaml
           )
       - id: end-of-file-fixer
       - id: trailing-whitespace
@@ -16,11 +16,11 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
-      - id: ruff-format
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
+      # - id: ruff-format
+  # - repo: https://github.com/PyCQA/isort
+  #   rev: 5.13.2
+  #   hooks:
+  #     - id: isort
   ## using ruff which uses black already
   # - repo: https://github.com/psf/black
   #   rev: 24.2.0
