--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
-      # - id: ruff-format
+      - id: ruff-format
   # - repo: https://github.com/PyCQA/isort
   #   rev: 5.13.2
   #   hooks:
