--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,35 @@
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
   pull_request:
     branches:
       - main
 jobs:
   ci:
+    env:
+      NSW_DOE_DATA_STACK_IN_A_BOX__ENV: dev
+      NSW_DOE_DATA_STACK_IN_A_BOX_DBT_PROJECT_DIR: /workspaces/nsw-doe-data-stack-in-a-box/transformation/transformation_nsw_doe
+
+      NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__DEV: /workspaces/nsw-doe-data-stack-in-a-box/reports/sources/nsw_doe_data_stack_in_a_box__dev
+      NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB__DEV: /workspaces/nsw-doe-data-stack-in-a-box/reports/sources/nsw_doe_data_stack_in_a_box__dev/nsw_doe_data_stack_in_a_box__dev.duckdb
+      NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV: nsw_doe_data_stack_in_a_box__dev
+      NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__DEV: analytics
+
+      NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__PROD:  # not needed "/reports/nsw_doe_data_stack_in_a_box__prod.duckdb"
+      NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD: nsw_doe_data_stack_in_a_box__prod
+      NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__PROD: analytics
+
+
+      # DEMO_JAFFLE_SHOP__ENV: dev
+      # DEMO_JAFFLE_SHOP_DBT_PROJECT_DIR: /workspaces/nsw-doe-data-stack-in-a-box/transformation/demo_transformation_jaffle_shop
+
+      # DEMO_JAFFLE_SHOP_DB_PATH__DEV: /workspaces/nsw-doe-data-stack-in-a-box/reports/sources/demo_jaffle_shop__dev
+      # DEMO_JAFFLE_SHOP_DB_PATH_AND_DB__DEV: /workspaces/nsw-doe-data-stack-in-a-box/reports/sources/demo_jaffle_shop__dev/demo_jaffle_shop__dev.duckdb
+      # DEMO_JAFFLE_SHOP_DB_NAME__DEV: demo_jaffle_shop__dev
+      # DEMO_JAFFLE_SHOP_TARGET_SCHEMA__DEV: analytics
+
+      # DEMO_JAFFLE_SHOP_DB_PATH__PROD:  # not needed "/reports/nsw_doe_data_stack_in_a_box__prod.duckdb"
+      # DEMO_JAFFLE_SHOP_DB_NAME__PROD: demo_jaffle_shop__prod
+      # DEMO_JAFFLE_SHOP_TARGET_SCHEMA__PROD: demo
     name: CI Check
     runs-on: macos-latest
     steps:
@@ -24,7 +49,9 @@ jobs:
         run: python3 -m pip install uv
       - name: Install Python requirements
         run: uv pip install --system -r requirements.txt
-      - name: Run T and Lint
+      - name: pytest
+        run: cd ../../orchestration && pytest
+      - name: Dbt checks
         run: |
           cd ./transformation/transformation_nsw_doe
           dbt deps
@@ -32,8 +59,6 @@ jobs:
           mf validate-configs
       - name: Lint SQL
         run: sqlfluff lint --format github-annotation-native
-      - name: pytest
-        run: cd ../../orchestration && pytest
       # - name: Build Evidence
       #   env:
       #     EVIDENCE_DATABASE: "duckdb"
