adding exampl ml model

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,7 @@
 # dont store any secrets in this .env file!!! its on github!!!
 
+PYTHONPATH=/home/dave/data-engineering/nsw-doe-data-stack-in-a-box
+
 # dev || prod # dont put quotes around this. As its being used in dbt jinja its not removing quotes properly
 NSW_DOE_DATA_STACK_IN_A_BOX__ENV=dev
 NSW_DOE_DATA_STACK_IN_A_BOX_DBT_PROJECT_DIR=/workspaces/nsw-doe-data-stack-in-a-box/transformation/transformation_nsw_doe
