--- a/transformation/transformation_nsw_doe/profiles.yml
+++ b/transformation/transformation_nsw_doe/profiles.yml
@@ -8,7 +8,7 @@ nsw_doe_data_stack_in_a_box_profile:
       threads: 4
     prod:
       type: duckdb
-      path: "md:{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}"
+      path: "md:{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}?motherduck_token={{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_TOKEN__PROD') }}"
       schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__PROD') }}"
       threads: 4
   target: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX__ENV') }}"
