--- a/.env.dev
+++ b/.env.dev
@@ -16,6 +16,7 @@ NSW_DOE_DATA_STACK_IN_A_BOX_DB_TOKEN__PROD=<token>
 NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD=nsw_doe_data_stack_in_a_box__prod
 NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__PROD=analytics
 
+EVIDENCE_SOURCE__nsw_doe_data_stack_in_a_box__prod__filename=nsw_doe_data_stack_in_a_box__dev.duckdb
 
 DEMO_JAFFLE_SHOP__ENV=dev
 DEMO_JAFFLE_SHOP_DBT_PROJECT_DIR=/workspaces/nsw-doe-data-stack-in-a-box/transformation/demo_transformation_jaffle_shop
