--- a/transformation/transformation_nsw_doe/profiles.yml
+++ b/transformation/transformation_nsw_doe/profiles.yml
@@ -2,13 +2,18 @@ nsw_doe_data_stack_in_a_box_profile:
   outputs:
     dev:
       type: duckdb
-      path: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB__DEV') }}"
-      database: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV') }}"
-      schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__DEV') }}"
+      path: "{{ env_var('GITHUB_WORKSPACE') }}/{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB') }}"
+      database: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME') }}"
+      schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}"
       threads: 4
     prod:
       type: duckdb
-      path: "md:{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}?motherduck_token={{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_TOKEN__PROD') }}"
-      schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__PROD') }}"
+      path: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB') }}"
+      schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}"
+      threads: 4
+    test:
+      type: duckdb
+      path: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH_AND_DB') }}"
+      schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}"
       threads: 4
   target: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX__ENV') }}"
