--- a/transformation/transformation_nsw_doe/models/staging/acara/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/acara/sources.yml
@@ -3,16 +3,13 @@ version: 2
 sources:
   - name: raw
     database: |
-      {%- if  target.name == "dev" -%} {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV') }}
-      {%- elif target.name == "prod"  -%} {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}
-      {%- else -%} invalid_database
-      {%- endif -%}
-    schema: raw  
+      {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME') }}
+    schema: raw
     tables:
       - name: raw__nsw_doe_datahub__master_dataset
         loader: Dagster
         loaded_at_field: _load_timestamp
-    
+
         quoting:
           database: true
           schema: false
@@ -21,7 +18,7 @@ sources:
         freshness:
           warn_after: {count: 24, period: hour}
           error_after: {count: 48, period: hour}
-          
+
         # meta:
         #   dagster:
         #     asset_key: ["raw","raw_payments_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
