--- a/.github/workflows/ci__prod__no_source_change.yml
+++ b/.github/workflows/ci__prod__no_source_change.yml
@@ -15,19 +15,21 @@ jobs:
     runs-on: ubuntu-latest
     environment: prod
     steps:
-    - name: Checkout branch
-      uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v4.1.1
 
-    - name: Install Python 3.7
-      uses: actions/setup-python@v1
+    - name: Setup Python
+      uses: actions/setup-python@v5.0.0
       with:
-        python-version: 3.7
+        python-version: "3.11.x"
 
-    - name: Install DBT
+    - name: Install uv
+      run: python3 -m pip install uv
+    - name: Install Python requirements
+      run: uv pip install --system -r requirements.txt
+    - name: Dbt checks
       run: |
-        python -m pip install --upgrade pip
-        pip install dbt-snowflake==1.0.0
-        pip install datafold-sdk==0.0.7
+        cd ${{github.workspace}}/transformation/transformation_nsw_doe
         dbt deps
 
     - name: Configure AWS Credentials
