--- a/.github/workflows/ci__prod__no_source_change.yml
+++ b/.github/workflows/ci__prod__no_source_change.yml
@@ -9,6 +9,11 @@ env:
     DATAFOLD_APIKEY:                                    ${{ secrets.DATAFOLD_APIKEY }}
     S3_BUCKET_METADATA:                                 ${{ secrets.S3_BUCKET_METADATA }}
 
+# required for aws github OICD security
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   ci__prod__no_source_change:
     name: Prod deployment with no source changes
@@ -33,16 +38,16 @@ jobs:
         dbt deps
 
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         # bucket is public so no need for creds
         # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-southeast-2
-        # role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
         # role-external-id: ${{ secrets.AWS_ROLE_EXTERNAL_ID }}
         # role-duration-seconds: 1200
-        # role-session-name: MySessionName
+        role-session-name: MySessionName
 
     - name: Get the last manifest.json from s3
       run: |
