--- a/.github/workflows/ci__prod__no_source_change.yml
+++ b/.github/workflows/ci__prod__no_source_change.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Deploy
       run: |
         echo ${{github.workspace}}
-        cd ${{github.workspace}}/tansformation/transformation_nsw_doe
+        cd ${{github.workspace}}/tansformation/transformation_nsw_doe && ls
         echo pwd
         dbt build --models state:modified+ --state ${{github.workspace}}/transformation/transformation_nsw_doe/target/last_manifest --profiles-dir ${{github.workspace}}/transformation/transformation_nsw_doe
 
