--- a/.github/workflows/ci__prod__no_source_change.yml
+++ b/.github/workflows/ci__prod__no_source_change.yml
@@ -55,6 +55,9 @@ jobs:
 
     - name: Deploy
       run: |
+        ls ${{github.workspace}}
+        echo hello
+        ls ${{github.workspace}}/tansformation/transformation_nsw_doe
         echo ${{github.workspace}}
         cd ${{github.workspace}}/tansformation/transformation_nsw_doe && ls
         echo pwd
