--- a/.github/workflows/ci__prod__no_source_change.yml
+++ b/.github/workflows/ci__prod__no_source_change.yml
@@ -66,7 +66,6 @@ jobs:
 
     - name: Get the last manifest.json from s3
       run: |
-        aws s3 ls
         echo s3://$S3_BUCKET_METADATA/prod/manifest/manifest.json
         aws s3 cp s3://$S3_BUCKET_METADATA/prod/manifest/manifest.json ${{github.workspace}}/transformation/transformation_nsw_doe/target/last_manifest/manifest.json
 
@@ -90,6 +89,7 @@ jobs:
         aws s3 cp ${{github.workspace}}/transformation/transformation_nsw_doe/target/catalog.json s3://$S3_BUCKET_METADATA/
         aws s3 cp ${{github.workspace}}/transformation/transformation_nsw_doe/target/manifest.json s3://$S3_BUCKET_METADATA/
 
-    - name: Datafold dbt upload
-      run: |
-       datafold dbt upload --ci-config-id 40 --run-type production --target-folder ${{github.workspace}}/transformation/transformation_nsw_doe/target
+    # reoving datafold until we get a motherduck connection
+    # - name: Datafold dbt upload
+    #   run: |
+    #    datafold dbt upload --ci-config-id 40 --run-type production --target-folder ${{github.workspace}}/transformation/transformation_nsw_doe/target
