--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,9 +29,9 @@ repos:
   #     - id: black
   ## need to work on this some more
   - repo: https://github.com/sqlfluff/sqlfluff
-    rev: 2.3.5
+    rev: 3.0.6
     hooks:
       - id: sqlfluff-fix
   #       # args: ["."]
-  #       additional_dependencies:
-  #         ["dbt-duckdb~=1.7.1", "sqlfluff-templater-dbt~=2.3.5"]
+        additional_dependencies:
+          ["dbt-duckdb~=1.7.1", "sqlfluff-templater-dbt~=3.0.6"]
