--- a/.github/workflows/ci_dev.yml
+++ b/.github/workflows/ci_dev.yml
@@ -52,6 +52,10 @@ jobs:
       # mf validate-configs # hold off until figure out how to run dagster to generate source data then dbt build ect...
       - name: Lint SQL
         run: sqlfluff lint --format github-annotation-native
+      # required to set path for pytest
+      - name: set pythonpath
+        run: |
+          echo "PYTHONPATH=orchestration" >> $GITHUB_ENV
       - name: pytest
         run: cd ${{github.workspace}}/orchestration && pytest
       # - name: Build Evidence
